# handmade-store

./: .gitignore  README.md  pyproject.toml
src/: config.py  database.py  exception_handlers.py  exceptions.py  main.py  validators.py
src/api/: __init__.py  admin.py  categories.py  category.py  order.py  orders.py  product.py  products.py
src/migrations/: env.py
src/migrations/versions/: 2025_10_21_1835-96290dedc1f5_initial_models.py  2025_10_26_2127-af89feea9d7b_change_admin_model.py  2025_10_26_2259-024e81c1553e_change_admin_model.py
src/models/: __init__.py  admin.py  admins.py  base.py  categories.py  orders.py  products.py
src/repositories/: __init__.py  admin.py  admins.py  base.py  categories.py  category.py  order.py  orders.py  product.py  products.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: __init__.py  admin.py  admins.py  base.py  categories.py  category.py  order.py  orders.py  product.py  products.py
src/services/: __init__.py  admin.py  admins.py  base.py  categories.py  category.py  order.py  orders.py  product.py  products.py
src/utils/: database.py  db_manager.py  dependencies.py
