[project]
name = "handmade-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "black>=25.9.0",
    "celery>=5.5.3",
    "fastapi-cache2>=0.2.2",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "passlib[bcrypt]==1.7.4",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "redis>=6.4.0",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "pydantic[email]>=2.12.2",
]
[tool.ruff]
line-length = 100
